[gd_scene load_steps=5 format=3 uid="uid://bulmv2xsyh4tc"]

[ext_resource type="Script" path="res://Scripts/Coin.gd" id="1_dea5n"]
[ext_resource type="AudioStream" uid="uid://dwijlsfo1db3t" path="res://Sounds/Effects/CoinGet.wav" id="2_x456p"]

[sub_resource type="SphereMesh" id="SphereMesh_1wi6k"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4dm8y"]

[node name="Coin" type="Node3D"]
script = ExtResource("1_dea5n")

[node name="Visuals" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visuals"]
mesh = SubResource("SphereMesh_1wi6k")

[node name="CollectArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectArea"]
shape = SubResource("SphereShape3D_4dm8y")

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_x456p")

[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
